class Stats:
    def __init__(self) -> None:
        self.hp : int
        self.attack : int
        self.defense : int
        self.sp_atk : int
        self.sp_def : int
        self.speed : int